--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.1.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
